import { Embarcacao } from "./embarcacao";



export class Motor {

    id!: number;
    marca!: string;
    numSerie!: string;
    potencia!: number;

    embarcacao!: Embarcacao;
}


