export class OrgMilitar {
    id!: number;
    nome!: string;
    abreviatura!: string;
    telefone!: string;
    logradouro!: string;
    bairro!: string;
    numero!: string;
    complemento!: string;
    uf!: string;
    cidade!: string;
    cep!: string;

  }